Refactor encoding feature following YAGNI/KISS/DRY principles
- Remove UTF-16 and US-ASCII encodings (YAGNI: rarely used for CSV)
- Move BOM bytes into enum (KISS: single source of truth)
- Remove unused getDisplayName() methods (DRY)
- Add proper Charset imports (Clean Code: avoid verbose qualified names)
- Simplify writeWithEncoding using enum's getBom() method